2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): DU 5.0 has
	serious problems handling heredocs in heredocs.
	Reported by Nicolas Joly.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Don't promote non `m4_*' M4 macros.
	(Making testsuite Scripts): Update.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/Makefile.am (CLEANFILES): Add autom4te.cfg.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Quadrigraphs): Document `@&t@'.
	(testsuite Scripts): There is no such thing as `atconfig.in'.
	And actually one diagram is missing: test suite runtime.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/Autom4te/General.pm (&find_file): Browse the includes in the
	inverse order.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoupdate.in (@include): `installcheck' revealed the path
	to m4sugar was lacking!

2001-08-31  Akim Demaille  <akim@epita.fr>

	* man/Makefile.am (.x.1): We really have pass
	autom4te_perllibdir.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Don't pass all the args to
	debug scripts, in particular passing explicitly listed tests to
	run is stupid.

	
2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&parse_args): Strip `.' from `@include'.
	* bin/autoupdate.in: Use --include, -I, and --force, -f, too.
	Use directly autom4te, not autoconf.
	* tests/autoupdate: $top_srcdir/lib is needed too for melt files.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* tests/semantics.at (AC_C_BIGENDIAN): Missing eol.
	* bin/autoheader.in (%symbol): Strip arguments of macros.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Catch up -I, --include changes.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&parse_args): Die on unknown languages.
	* bin/autoheader.in: Run directly autom4te --mode=autoconf, no
	need for autoconf.
	Promote --include over --macrodir and other obsolete options.
