@@ -1,5 +1,11 @@
 2001-08-31  Akim Demaille  <akim@epita.fr>
 
+	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): Fix the
+	previous patch.
+	* tests/atspecific.m4 (AT_CHECK_AUTOHEADER): Can create `config.hin~'.
+
+2001-08-31  Akim Demaille  <akim@epita.fr>
+
 	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): DU 5.0 has
 	serious problems handling heredocs in heredocs.
 	Reported by Nicolas Joly.
